# structsy

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  code-of-conduct.md
actix_web/: Cargo.toml  tests.http
actix_web/src/: main.rs
examples/: Cargo.toml  advanced.rs  advanced_query.rs  basic.rs  basic_query.rs  embedded.rs  projection.rs
examples/actix_web/: .gitignore  Cargo.toml  README.md  tests.http
examples/actix_web/src/: main.rs
examples/relm/: Cargo.toml
examples/relm/src/: main.rs
src/: desc.rs  embedded_filter.rs  error.rs  filter.rs  format.rs  id.rs  index.rs  internal.rs  lib.rs  queries.rs  record.rs  structsy.rs  transaction.rs
structsy/: Cargo.toml  README.md
structsy-derive/: Cargo.toml  README.md
structsy-derive/src/: lib.rs  persistent.rs  queries.rs
structsy-derive/tests/: first_generation.rs
structsy/examples/: advanced_query.rs  basic_query.rs  embedded.rs  order.rs
structsy/src/: actions.rs  desc.rs  embedded_filter.rs  error.rs  filter.rs  filter_builder.rs  format.rs  id.rs  index.rs  internal.rs  lib.rs  projection.rs  queries.rs  record.rs  snapshot.rs  structsy.rs  transaction.rs
structsy/src/filter_builder/: desc_info_finder.rs  embedded_filter_builder.rs  execution_iterator.rs  execution_model.rs  execution_step.rs  fields_holder.rs  filter_builder.rs  filter_builder_step.rs  mod.rs  plan_model.rs  query_model.rs  query_value.rs  reader.rs  start.rs  value_compare.rs
structsy/tests/: basic_projection.rs  enum_persistence.rs  filters.rs  first_generation.rs  migration.rs  open_close.rs  order_queries.rs  queries.rs  queries_ref.rs  snapshot_queries.rs  snapshot_queries_index.rs  snapshot_queries_ref.rs  tx_queries.rs
structsy_tools/: Cargo.toml  README.md
structsy_tools/src/: lib.rs
tests/: basic_projection.rs  desc_read_write.rs  enum_persistence.rs  filters.rs  first_generation.rs  migration.rs  open_close.rs  order_queries.rs  queries.rs  queries_index.rs  queries_ref.rs  records.rs  tx_queries.rs  tx_queries_index.rs  tx_queries_ref.rs  types.rs
tsdb-derive/: Cargo.toml
tsdb-derive/src/: lib.rs
tsdb-derive/tests/: first_generation.rs
