[package]
name = "structsy"
version = "0.3.0"
description = "Simple single file structs database"
license = "MIT"
authors = ["Tglman <tglman@tglman.com>"]
repository = "https://gitlab.com/tglman/structsy"
edition = "2018"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }
gitlab = { repository = "tglman/structsy", branch = "master" }

[dependencies]
persy = "0.11"
byteorder ="1.3"
rand= "0.7"
data-encoding = "2.1"

[dev-dependencies]
structsy-derive = {path="structsy-derive"}
tempfile = "3.0"
