[package]
name = "actix_web"
version = "0.1.0"
authors = ["Tglman <tglman@tglman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="2.0"
actix-rt = "1.0"
structsy = "0.2"
structsy-derive = "0.2"
serde ="1.0"
serde_derive="1.0"
