[package]
name = "structsy-derive"
version = "0.1.0"
description = "Structsy single file struct database persistent derive implementation" 
license = "MIT"
authors = ["Tglman <tglman@tglman.com>"]
edition = "2018"
repository = "https://gitlab.com/tglman/structsy"

[badges]
gitlab = { repository = "tglman/structsy", branch = "master" }

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"
darling = "0.9"
synstructure = "0.10"

[dev-dependencies]
structsy = {path="../"}
[lib]
proc-macro = true

