[package]
name = "structsy-derive"
version = "0.1.0"
description = "Structsy single file struct database persistent derive implementation" 
license = "MIT"
authors = ["Tglman <tglman@tglman.com>"]
edition = "2018"
repository = "https://gitlab.com/tglman/structsy"

[badges]
gitlab = { repository = "tglman/structsy", branch = "master" }

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.10"
synstructure = "0.12"

# [dev-dependencies]
#structsy = {path="../"}

