[package]
name = "structsy"
version = "0.4.0"
description = "Simple single file structs database"
license = "MIT"
authors = ["Tglman <tglman@tglman.com>"]
repository = "https://gitlab.com/tglman/structsy"
edition = "2018"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }
gitlab = { repository = "tglman/structsy", branch = "master" }

[dependencies]
persy = "1.0"
byteorder ="1.3"
rand= "0.8"
data-encoding = "2.1"
serde = {version = "1.0", features=["derive"], optional=true}
structsy-derive = {version="0.4", optional=true}

[features]
serde_info=["serde"]
derive=["structsy-derive"]

[dev-dependencies]
structsy-derive = "0.4"
tempfile = "3.0"
