[package]
name = "structsy_tools"
version = "0.1.0"
edition = "2018"

[dependencies]
structsy = { path="../structsy/" }
serde = {version = "1.0", features=["derive"], optional=true}

[features]
serde_info=["structsy/serde_info", "serde"]

[dev-dependencies]
structsy-derive = {path="../structsy-derive"}
