[package]
name = "structsy_tools"
description = "Tools for structsy embedded dbms"
version = "0.2.0"
license = "MIT"
authors = ["Tglman <tglman@tglman.com>"]
edition = "2018"
repository = "https://gitlab.com/tglman/structsy"
readme = "README.md"

[badges]
gitlab = { repository = "tglman/structsy", branch = "master" }

[dependencies]
structsy = { path="../structsy/" }
serde = {version = "1.0", features=["derive"], optional=true}

[features]
serde_integration=["structsy/serde_info", "serde"]

[dev-dependencies]
structsy-derive = {path="../structsy-derive"}
